--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Início</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<span class="pageheader">Modulum</span>
+<br />
+<p class="pagecontent">Esta aplicação está em desenvolvimento, seu nome é "Modulum", essa aplicação tem como objetivo cadastrar seu proprio sistema dentro dessa plataforma que será apresentado como projeto final na Faculdade das Americas em junho de 2025</p>
+<h5 class="productheader"> Versao do dia 18/09/2024</h5>
