--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -8,11 +8,11 @@
         <div class="top-row px-4">
             <AuthorizeView>
                 <Authorized>
-                    Logged in as @context.User.Identity?.Name. <a href="logout"><span class="bi bi-door-closed-fill" aria-hidden="true" style="vertical-align:middle"></span> Logout</a>
+                    Logado como @context.User.Identity?.Name. <a href="logout"><span class="bi bi-door-closed-fill" aria-hidden="true" style="vertical-align:middle"></span> Sair</a>
                 </Authorized>
           <NotAuthorized>
-            <a href="login"><span class="bi bi-door-open" aria-hidden="true" style="vertical-align:middle"></span> Login</a>
-            <a href="register"><span class="bi bi-pencil-square" aria-hidden="true" style="vertical-align:middle"></span> Register</a>
+            <a href="login"><span class="bi bi-door-open" aria-hidden="true" style="vertical-align:middle"></span> Entrar</a>
+            <a href="register"><span class="bi bi-pencil-square" aria-hidden="true" style="vertical-align:middle"></span> Cadastre-se</a>
                 </NotAuthorized>
             </AuthorizeView>
         </div>
